# minio-mcp-server

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
examples/: fastmcp_rest_api_test.py
scripts/: enterprise_minio_client.py  ollama_test.py  setup_dev.py  test_connection.py  test_jsonplaceholder.py  test_ollama_minio_client.py
src/minio_mcp/: chat_client.py  server.py
src/minio_mcp/infrastructure/: minio_client.py
src/minio_mcp/tools/: bucket_tools.py  entities.py  object_tools.py
tests/infraestructure/: test_minio_client.py
tests/infrastructure/: test_minio_client.py
tests/tools/: test_bucket_tools.py  test_object_tools.py
